[package]
name = "coreaudio-sys"
version = "0.2.3"
authors = ["Mitchell Nordine <mitchell.nordine@gmail.com>"]
description = "Bindings for Apple's CoreAudio frameworks generated via rust-bindgen"
license = "MIT"
keywords = ["core", "audio", "unit", "osx", "ios"]
readme = "README.md"
homepage = "https://github.com/RustAudio/coreaudio-sys"
repository = "https://github.com/RustAudio/coreaudio-sys.git"
build = "build.rs"

[target.'cfg(target_os = "ios")'.dependencies]
objc = "0.2.7"
block = "0.1.6"

[build-dependencies.bindgen]
#version = "0.52"
git = "https://github.com/simlay/rust-bindgen.git"
branch = "categories-and-better-return-types"
#git = "https://github.com/rust-lang/rust-bindgen.git"
#revision = "ba409edf5d3a1acc6ac4dcb32d1e168cc3a2a41b"
#path = "../../rust-bindgen/"
default-features = false

[features]
default = ["audio_toolbox", "audio_unit", "core_audio", "open_al", "core_midi"]
audio_toolbox = []
audio_unit = []
core_audio = []
open_al = []
core_midi = []
