[package]
name = "coreaudio-sys"
version = "0.2.3"
authors = ["Mitchell Nordine <mitchell.nordine@gmail.com>"]
description = "Bindings for Apple's CoreAudio frameworks generated via rust-bindgen"
license = "MIT"
keywords = ["core", "audio", "unit", "osx", "ios"]
readme = "README.md"
homepage = "https://github.com/RustAudio/coreaudio-sys"
repository = "https://github.com/RustAudio/coreaudio-sys.git"
build = "build.rs"

[build-dependencies.bindgen]
version = "0.55"

[features]
default = ["audio_toolbox", "audio_unit", "core_audio", "open_al", "core_midi"]
audio_toolbox = []
audio_unit = []
core_audio = []
open_al = []
core_midi = []
